--- a/README
+++ b/README
@@ -5,7 +5,7 @@ To build a coda.o / coda.ko module for your Linux kernel:
 ---------------------------------------------------------
 
 For 3.16 and newer kernels:
-- sudo dkms add linux-dkms
+- sudo dkms add coda-dkms
 - sudo dkms build coda/7.0
 
 For kernels before 3.16:
