--- a/coda-dkms/README
+++ b/coda-dkms/README
@@ -1,13 +1,13 @@
-This is the Coda kernel module as in Linux-5.4-rc8 with patches to allow
-for DKMS builds against older kernels
+This is the Coda kernel module as in Linux-5.15 with patches to allow for DKMS
+builds against older kernels
 
 To build this, install dkms on your system and then run,
 
     dkms add `pwd`
-    dkms build coda/7.1
-    dkms install coda/7.1
+    dkms build coda/7.2
+    dkms install coda/7.2
 
 and to remove,
 
-    dkms remove coda/7.1 --all
+    dkms remove coda/7.2 --all
 
